@@ -17,6 +17,7 @@ ctags-5.5 (Sun Feb 23 2003)
 * Added support for SML (Standard ML) language, contributed by Venkatesh Prasad.
 * Added mapping for .plx to Perl.
 * Added tags for autocommand groups [Vim, Patch #664685].
+* Added '$', 'D', and 'd' in column 1 as comment characters [Fortran].
 * Added special handling of --options=NONE to disable automatic reading of
   options from configuration files or environment.
 * Fixed problem with lower case <SID> tag [Vim, Bug #657327].
